--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>i pledge to become a superstar developer...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>another universe.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>coding.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>scooby dooooooo.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>computer</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>alien modification.</p>
     </section>
 
     <footer id="footer">
