--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <h1>Where I'm From</h1>
       <p>another universe.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>coding.</p>
+      <p>coding and nursing.</p>
       <h1>What's your dream job?</h1>
-      <p>scooby dooooooo.</p>
+      <p>scooby doo.</p>
       <h1>Where do you live?</h1>
       <p>computer</p>
       <h1>Why do you want to be a web developer?</h1>
